# Numberphile_Follow_Alongs

./: NumberphileFollowAlongs_HitomezashiPatterns.ipynb  NumberphileFollowAlongs_StonesOnAnInfiniteChessboard.ipynb  NumberphileRundowns_WitnessNumbers.ipynb  README.md  numberphile_candles_with_a_knife.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: test-suite.yml
src/numberphile-common-tools/: main.py
src/numberphile-common-tools/miller-rabin-test/: __init__.py  interfaces.py
src/numberphile_common_tools/: main.py
src/numberphile_common_tools/miller_rabin_test/: __init__.py  interfaces.py  prime_checkers.py  star_witnesses.py  witness_test.py
src/numberphile_common_tools/patterns/: __init__.py  comparisons.py  generic_maze.py  hitomezashi_stitch_pattern.py
src/numberphile_common_tools/sequence_generators/: __init__.py  odd_generator.py  prime_generator.py
tests/: test_prime_solvers.py
