[metadata]
name = numberphile_common_tools
description = Common tools for solving some problems and challenges presented in Numberphile videos??!
author = Gregory Symington (GregSym)
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    numberphile_common_tools
    numberphile_common_tools.miller_rabin_test
    numberphile_common_tools.sequence_generators
    numberphile_common_tools.patterns

install_requires =
    numpy>= 1.21
    sympy>= 1.9
    pandas>= 1.3
    bokeh>= 2.4

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160